--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/dompurify": "^3.0.5",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "dompurify": "^3.3.1",
     "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
